--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, impedit voluptatum asperiores dicta, quo, iure dolor ab vitae laborum magnam culpa dignissimos fuga exercitationem ratione vero eum mollitia odio esse.</p>
         </div>
         <div id="photo">
-            <img src="/img/bg.jpg" alt="" id="homeimg">
+            <img src="bg.jpg" alt="" id="homeimg">
         </div>
     </section>
 </body>
